Fix admin bar spacing and blog page title

--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -77,3 +77,60 @@ body {
         }
     }
 }
+
+
+/* Spacing if logged in */
+.admin-bar .site-header .navigation-top {
+    top: 32px;
+}
+@media screen and (min-width: 48em) {
+    .site-content {
+        padding: 5.5em 0 0;
+    }
+    .admin-bar .site-content {
+        padding: calc(5.5em + 32px) 0 0;
+    }
+}
+
+
+/* Code of Conduct Page */
+body.page-id-19 .entry-content ol ol,
+body.page-id-19 .entry-content ol ul,
+body.page-id-19 .entry-content ul ol,
+body.page-id-19 .entry-content ul ul {
+    margin: 0 0 1em;
+}
+
+
+/* Organizers Page */
+.wcorg-organizer {
+    text-align: center;
+    width: 13.75rem;
+    margin: 1.5em 0;
+}
+.wcorg-organizers {
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-justify-content: center;
+    justify-content: center;
+}
+
+
+/* Sponsors Page */
+.page-id-10 .wcorg-sponsors {
+    margin: 4em 0 0;
+}
+.page-id-10 .wcorg-sponsor {
+    margin: 0 auto 4em;
+}
+.page-id-10 .wcorg-sponsors h2 {
+    font-weight: bold;
+}
+
+
+/* Home page */
+#panel1 .panel-content header h2 {
+    color: #222;
+}
